Bug 94686 - LibO 5.0.2.2 Windows don't work into VMware
Summary: LibO 5.0.2.2 Windows don't work into VMware
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.3
Keywords: regression
: 94820 95205 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-10-02 06:06 UTC by Maxime THEPAULT
Modified: 2015-10-20 21:37 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxime THEPAULT 2015-10-02 06:06:02 UTC
Hi,

I tried LibreOffice 5.0.2.2 (stable) x86 and x64 versions with differents Windows :

Windows 7 x64 SP1 (virtual machine with VMware)
Windows 8.1 x64 (virtual machine with VMware)
Windows 10 x64 (virtual machine with VMware)

Note : LibreOffice 5.0.1 x64 worked perfectly.

The 5.0.2.2 x86 and x64 versions don't work at all on thoses VMs, I obtain a transparent or black window, even with a new pref folder.

On thoses virtual machines, I disabled 3D Graphics possibility, deleted LibreOffice prefs folder into %APPDATA% and I tried again : LibreOffice crashs.
On the 2nd launch, LibreOffice seems to work, it's very weird.

After that "good" launch, I enable 3D Graphics into VMware again, and it works.

I never seen that bug, even with LibreOffice 5.0.1 and my VMware is the same (11.1.2).
Please, do you know what was changed between LibreOffice 5.0.1 and 5.0.2 that brings that bug ?

Thank you.
Comment 1 Maxim Monastirsky 2015-10-02 07:10:17 UTC
Hi,

(In reply to Maxime THEPAULT-DENIS from comment #0)
> Please, do you know what was changed between LibreOffice 5.0.1 and 5.0.2
> that brings that bug ?
OpenGL enabled as a late feature.

> On thoses virtual machines, I disabled 3D Graphics possibility, deleted
> LibreOffice prefs folder into %APPDATA% and I tried again : LibreOffice
> crashs.
> On the 2nd launch, LibreOffice seems to work, it's very weird.
Well, I guess it's somewhat the intended behavior. If there is a crash in OpenGL once, we disable it completely so it will never load again.

@Michael: Any thoughts on this?
Comment 2 Michael Meeks 2015-10-02 08:34:00 UTC
How very odd =) I guess there is something we don't like about VMWare's OGL drivers ... then again, I'm quite surprised we're GL enabled with VMWare's drivers. It would be great to get some details about your hardware so we can black-list them.

After the crash it's good that we disable GL. Is there any chance you can get a dbgutil build from the -5-0 branch - and run LibreOffice from the windows console thus:

SAL_LOG=+INFO.vcl.opengl+WARN.vcl.opengl soffice.exe 2> c:\tmp\logfile.txt

And then attach the logfile.txt here. Ideally for the 1st run where it crashes - then we can blacklist vmware's GL driver =)

Thanks !
Comment 3 Maxime THEPAULT 2015-10-02 08:41:39 UTC
Thank you for that information, it helped me to have a workaround for that bug.

I added the following line into my "registrymodifications.xcu" :

<item oor:path="/org.openoffice.Office.Common/VCL"><prop oor:name="UseOpenGL" oor:op="fuse"><value>false</value></prop></item>

Also Michael I never done that so I will try your debug, thanks too ;)
Comment 4 Maxime THEPAULT 2015-10-02 08:48:18 UTC
Sorry but I don't know where to download the debug version you are talking about.

I only found that link but it don't contains anything :
http://dev-builds.libreoffice.org/pre-releases/win/
Comment 6 Maxime THEPAULT 2015-10-07 05:22:26 UTC
I don't understand anything.

Michael said to try a "dbgutil build from the -5-0 branch" with a specific command.

You tell me there is not any dbgutil for Windows.

So if I understand, I can't do the debug Michael is asking for ?

Also, I tried to use "libreoffice-5-0~2015-10-05_07.55.30_LibreOfficeDev_5.0.3.0.0_Win_x86_en-US_de_ar_ja_ru_qtz.msi" with your link, but Michael's command don't work.
Comment 7 Buovjaga 2015-10-07 05:39:37 UTC
(In reply to Maxime THEPAULT-DENIS from comment #6)
> I don't understand anything.
> 
> Michael said to try a "dbgutil build from the -5-0 branch" with a specific
> command.
> 
> You tell me there is not any dbgutil for Windows.

No, Michael said: "Is there any chance you can get a dbgutil build from the -5-0 branch"
I simply pointed out there is no chance right now unfortunately, unless you do your own build.
Comment 8 Maxime THEPAULT 2015-10-07 07:46:16 UTC
Ok thank you, so I don't have the skill do to that.

I will keep the workaroung.
Comment 9 Maxime THEPAULT 2015-10-07 07:47:30 UTC
Sorry for the previous comment :

I will keep the workaround.
Comment 10 Michael Meeks 2015-10-07 08:11:41 UTC
Hmm - silly me; sorry ! now I look - we can get the same info out of a master / dbgutil build - it'd be just great to get the info about your device from there !

Thanks.
Comment 11 Maxime THEPAULT 2015-10-07 08:22:19 UTC
Ok, so what informations do you need, exactly ?

Maybe you want I use another command line ?
Comment 12 Michael Meeks 2015-10-07 09:47:30 UTC
Patch in:

https://gerrit.libreoffice.org/19222

To handle this; but its hard for me to test; hopefully we can get you a build with that in shortly (assuming it passes review / sanity checking).
Comment 13 How can I remove my account? 2015-10-07 10:36:32 UTC
Also reproducible in a Windows 8.1 virtual machine under Parallels Desktop, only black windows when LO tries to use OpenGL.
Comment 14 Commit Notification 2015-10-07 11:27:40 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=320c6e5dd2cfae2c42e9d75b0890bec6143b4adc&h=libreoffice-5-0

tdf#94686: Disable all vendors except for AMD/ATI/Intel/NVIDIA for now

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Maxime THEPAULT 2015-10-10 03:55:34 UTC
Thank you for the fix :)
Comment 16 Maxim Monastirsky 2015-10-20 21:36:24 UTC
*** Bug 94820 has been marked as a duplicate of this bug. ***
Comment 17 Maxim Monastirsky 2015-10-20 21:37:54 UTC
*** Bug 95205 has been marked as a duplicate of this bug. ***