tdf#94686 - disable all vendors except for AMD/ATI/Intel/NVidea for now.

Change-Id: I769aa1e0645b36f8623187e2e485ad2c474914c1